Move workspace app mentions to daemon
